# kani-engine

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  flake.nix  plan-kani-entry-bundler-init.md  refactor-plan.md  rust-toolchain.toml
.cursor/plans/: fix_choice_system_5b8ea3f9.plan.md  kag_interpreter_rust_0d60950b.plan.md  kani-pak_crate_04a6865b.plan.md  runtime_bridge_plan_8e10ca7c.plan.md  step_1_error_split_5dfec69f.plan.md  step_6_propagation_5684bd69.plan.md  variable_query_inject_api_f78c7892.plan.md
doc/: astro.config.mjs  markdoc.config.mjs  package.json  pnpm-lock.yaml
doc/src/: kag.tmLanguage.json  rhai.tmLanguage.json
doc/src/content/docs/en/: index.mdx
doc/src/content/docs/en/guides/: setup-lsp.md
doc/src/content/docs/en/reference/: kag-basics.mdoc  kag-character.mdoc  kag-display.mdoc  kag-flow.mdoc  kag-media.mdoc  kag-reference.mdoc  kag-rhai.md  kag-rhai.mdoc  kag-scripting.mdoc  kag-ui.mdoc
doc/src/content/docs/en/start-here/: getting-started.md
doc/src/content/docs/ja/: index.mdx
doc/src/content/docs/ja/guides/: setup-lsp.md
doc/src/content/docs/ja/reference/: kag-basics.mdoc  kag-character.mdoc  kag-display.mdoc  kag-flow.mdoc  kag-media.mdoc  kag-reference.mdoc  kag-rhai.md  kag-rhai.mdoc  kag-scripting.mdoc  kag-ui.mdoc
doc/src/content/docs/ja/start-here/: getting-started.md
kag-interpreter/: Cargo.toml
kag-interpreter/src/: error.rs  events.rs  inline_markup.rs  lib.rs  snapshot.rs
kag-interpreter/src/parser/: line.rs  mod.rs  tag.rs
kag-interpreter/src/runtime/: context.rs  executor.rs  mod.rs  script_engine.rs
kag-interpreter/tests/: test_0.rs  test_1.rs
kag-interpreter/tests/0-intorudction-to-sorting-algorithm/: game.ks
kag-interpreter/tests/1-choose-your-new-life/: game.ks
kag-lsp/: Cargo.toml
kag-lsp/src/: backend.rs  convert.rs  main.rs  store.rs
kag-lsp/src/analysis/: completion.rs  goto_def.rs  hover.rs  mod.rs  references.rs  symbols.rs
kag-syntax/: Cargo.toml
kag-syntax/src/: ast.rs  cst.rs  error.rs  lexer.rs  lib.rs  lower.rs  syntax_kind.rs  tag_defs.rs
kag-syntax/src/parser/: line.rs  mod.rs  tag.rs
kag-syntax/src/tag_defs/: macros.rs  mod.rs  names.rs  validate.rs
kani-bundler/: Cargo.toml
kani-bundler/init/src/: cg.ks  config.ks  first.ks  replay.ks  scene1.ks  title.ks  tyrano.ks
kani-bundler/src/: config.rs  main.rs
kani-bundler/src/cmd/: bundle.rs  check.rs  mod.rs  new.rs  run.rs
kani-init/: Cargo.toml
kani-init/src/: main.rs
kani-pak/: Cargo.toml
kani-pak/src/: asset_reader.rs  error.rs  format.rs  lib.rs  reader.rs  writer.rs
kani-runtime/: Cargo.toml  README.md
kani-runtime/src/: asset.rs  bridge.rs  events.rs  lib.rs
kani-runtime/src/systems/: input.rs  mod.rs  poll.rs  scenario.rs
kani-runtime/src/systems/tags/: animation.rs  audio.rs  chara.rs  effect.rs  image.rs  message.rs  misc.rs  mod.rs  transition.rs  ui.rs  video.rs
referance-code/: .gitignore
tests/test-game/: kani.toml
