[workspace]
resolver = "3"
members = ["kag-syntax", "kag-interpreter", "kag-lsp"]

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Interpreter
winnow = "1.0"
logos = "0.16"
miette = { version = "7", features = ["fancy"] }
rhai = "1.24"

# Async
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }

# Serialize
serde = "1"

# Syntax trees
rowan = "0.16.1"

# LSP
tower-lsp = "0.20"
dashmap = "6.1"
