[workspace]
resolver = "3"
members = ["kag-syntax", "kag-interpreter", "kag-lsp"]

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Interpreter
rhai = { version = "1.24", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Syntax trees
rowan = "0.16.1"
winnow = "1.0"
logos = "0.16"
miette = { version = "7", features = ["fancy"] }

# LSP
tower-lsp = "0.20"
dashmap = "6.1"
