[workspace]
resolver = "3"
members = ["kag-syntax", "kag-interpreter", "kag-lsp", "kani-pak"]

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# kani-pak
bevy = "0.18.1"
memmap2 = "0.9.10"
zstd = "0.13.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
rustc-hash = "2.1.2"
bevy_asset = "0.18.1"
futures-core = "0.3"

# Interpreter
rhai = { version = "1.24", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Syntax trees
rowan = "0.16.1"
winnow = "1.0"
logos = "0.16"
miette = { version = "7", features = ["fancy"] }

# LSP
tower-lsp = "0.20"
dashmap = "6.1"
