[package]
name = "kag-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
winnow = { workspace = true }
logos = { workspace = true }
miette = { workspace = true }
rhai = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }