[package]
name = "kani-pak"
version = "0.1.0"
edition = "2024"
description = "Custom binary package format for kani-engine — fast reading via memmap2 + zstd"

[features]
default = []
# Enables the bevy AssetReader implementation
bevy = ["dep:bevy_asset", "dep:futures-core"]
# Enables PakWriter for bundler use (no bevy required)
write = []

[dependencies]
thiserror.workspace = true
memmap2.workspace = true
zstd.workspace = true
bytemuck.workspace = true
rustc-hash.workspace = true
bevy_asset = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
